--- a/meetup/2014-12-03/README
+++ b/meetup/2014-12-03/README
@@ -4,5 +4,5 @@ To build the presentation
 3. make html
 
 The presentation is hosted the following URLs:
-French: https://savoirfairelinux.github.io/MONaaS-presentation/
-English: https://savoirfairelinux.github.io/MONaaS-presentation/en
+French: https://savoirfairelinux.github.io/presentations/meetup/2014-12-03/
+
