--- a/meetup/2015-03-02/README
+++ b/meetup/2015-03-02/README
@@ -1,8 +1,9 @@
 To build the presentation
 1. virtualenv env
+2. source env/bin/activate
 2. pip install -r requirements.freeze
 3. make html
 
 The presentation is hosted the following URLs:
-French: https://savoirfairelinux.github.io/presentations/meetup/2014-12-03/
+French: https://savoirfairelinux.github.io/presentations/meetup/2015-03-02/
 
